--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.23",
     "axios": "^1.6.8",
+    "context": "^3.0.29",
     "express": "^4.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.0.1",
+    "react-loader-spinner": "^6.1.6",
     "react-query": "^3.39.3",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
@@ -50,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-loader-spinner": "^4.0.0",
     "tailwindcss": "^3.4.3"
   }
 }
