--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "typeRoots": ["node_modules/@types"],
     "target": "es5",
     "paths": {
       "cheerio": ["./node_modules/cheerio/lib/index.d.ts"]
